@@ -35,6 +35,16 @@
 	- check on Samsung
 
 
+Xenowar_688_beta
+- Mod file support! Check out README.txt for info.
+- Item descriptions
+- Gameplay: lost UFOs now get a cash bonus instead of XP
+- Gameplay: research dependencies fixed
+- UI: tweaked the inventory screen to hopefully be neater
+- Help: new images, cleaned up errors
+- Rebalanced begin game vs. end game cash flow (special thanks to Reenen in the forums for feedback on this and other issues.)
+- Tap to upgrade weapons / armor in inventory UI
+
 Alpha 685
 Windows Only
 - Mod file support! Check out README.txt for info.
